# apps/backend/auth-service/src/utils/types/api/requests.ts
@@ -1,4 +1,6 @@
 export interface RequestSignUpDTO {
+  firstName: string;
+   lastName: string
   username: string;
   password: string;
   name: string;
